# lsl

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  README.md
beautifier/: beautify  uncrustify-fix.py  uncrustify.cfg
cmake/: FindEigen3.cmake  Findyaml-cpp.cmake  cmake_uninstall.cmake.in
examples/lsl-scan-matching/: CMakeLists.txt
examples/lsl-scan-matching/src/: main.cpp
include/lsl/containers/: pointcloud.hpp
include/lsl/geom/: lidarline2.hpp  line2.hpp  matrix.hpp  ransac.hpp  splitmerge.hpp  transformable.hpp  vector.hpp
include/lsl/gui/: keyevents.hpp  lslapp.hpp  mouseevents.hpp  panel.hpp  repaintingpanel.hpp  window.hpp
include/lsl/gui/events/: keyevents.hpp  mouseevents.hpp  paintevents.hpp  sizeevents.hpp
include/lsl/io/: carmencommand.hpp  carmenstream.hpp  imagestream.hpp  pcdheader.hpp  pcdstream.hpp  stream.hpp
include/lsl/optimization/: gradientdescent.hpp  newton.hpp  soma.hpp
include/lsl/probability/: multivariatenormaldistribution.hpp  normaldistribution.hpp
include/lsl/registration/: icp.hpp  llr.hpp  llt.hpp  polarndt.hpp  registration.hpp
include/lsl/system/: event.hpp
include/lsl/utils/: arrayutils.hpp  colorutils.hpp  cpputils.hpp  geomutils.hpp  imageutils.hpp  mathutils.hpp  stringutils.hpp
include/lsl/utils/eigen/: core.hpp  eigenaddons.hpp  matrixbaseaddons.hpp
include/lsl/visual/: display2d.hpp  lslvisualizer2d.hpp
libs/core/: CMakeLists.txt
libs/core/include/lsl/containers/: pointcloud.hpp
libs/core/include/lsl/detection/: ransac.hpp  splitmerge.hpp
libs/core/include/lsl/geom/: lidarline2.hpp  lidarplane3.hpp  line2.hpp  matrix.hpp  orthogonalpolygondecomposition.hpp  plane3.hpp  transformable.hpp
libs/core/include/lsl/io/: carmencommand.hpp  carmenstream.hpp  pcdstream.hpp  simplestream.hpp  stream.hpp
libs/core/include/lsl/optimization/: gradientdescent.hpp
libs/core/include/lsl/utils/: arrayutils.hpp  cpputils.hpp  mathutils.hpp  tostringmixin.hpp
libs/core/src/lsl/detection/: ransac.cpp  splitmerge.cpp
libs/core/src/lsl/geom/: lidarline2.cpp  lidarplane3.cpp  line2.cpp  orthogonalpolygondecomposition.cpp  plane3.cpp
libs/core/src/lsl/io/: carmencommand.cpp  pcdheader.cpp
libs/core/src/lsl/optimization/: gradientdescent.cpp
libs/core/src/lsl/utils/: mathutils.cpp  tostringmixin.cpp
libs/imaging/: CMakeLists.txt
libs/imaging/include/lsl/io/: imagestream.hpp
libs/registration/: CMakeLists.txt
libs/registration/include/lsl/registration/: improvedllr.hpp  llr.hpp  registration.hpp  sphericalplanesregistration.hpp
libs/registration/src/lsl/registration/: icp.cpp  improvedllr.cpp  llr.cpp  sphericalplanesregistration.cpp
src/lsl/geom/: lidarline2.cpp  line2.cpp  ransac.cpp  splitmerge.cpp
src/lsl/gui/: keyevents.cpp  lslapp.cpp  mouseevents.cpp  panel.cpp  repaintingpanel.cpp  window.cpp
src/lsl/gui/events/: keyevents.cpp  mouseevents.cpp  paintevents.cpp  sizeevents.cpp
src/lsl/io/: carmencommand.cpp  pcdheader.cpp  pcdstream.cpp
src/lsl/optimization/: gradientdescent.cpp  newton.cpp  soma.cpp
src/lsl/probability/: normaldistribution.cpp
src/lsl/registration/: icp.cpp  llr.cpp  llt.cpp  polarndt.cpp
src/lsl/utils/: arrayutils.cpp  colorutils.cpp  geomutils.cpp  imageutils.cpp  mathutils.cpp
src/lsl/visual/: display2d.cpp  lslvisualizer2d.cpp
